2011-03-01  Adam Roben  <aroben@apple.com>

        Skip another timing-out test on Windows XP

        <http://webkit.org/b/51596> tracks the failure.

        * platform/win-xp/Skipped: Added http/tests/xmlhttprequest/basic-auth-nouser.html.

2011-03-01  Adam Roben  <aroben@apple.com>

        Skip fast/events/pageshow-pagehide-on-back-cached.html on Windows

        It is flaky. The failure is tracked by <http://webkit.org/b/55329>.

        * platform/win/Skipped:
        * platform/win/fast/events/pageshow-pagehide-on-back-cached-expected.txt: Removed.

2011-03-01  Adam Roben  <aroben@apple.com>

        Check in Windows pixel results to match text results added in r79979

        Fixes <http://webkit.org/b/55451> [Win] select-listbox-multiple-no-focusring.html needs
        rebaseline

        * platform/win/fast/forms/select-listbox-multiple-no-focusring-expected.checksum: Added.
        * platform/win/fast/forms/select-listbox-multiple-no-focusring-expected.png: Added.

2011-03-01  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip one crashing tests on GTK. See also
        https://bugs.webkit.org/show_bug.cgi?id=53146

        * platform/gtk/Skipped:

2011-03-01  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip 2 crashing tests on GTK. See also
        https://bugs.webkit.org/show_bug.cgi?id=53146

        * platform/gtk/Skipped:

2011-03-01  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Antti Koivisto.

        SVG 1.1 2nd Edition color-prop-05-t.svg exposes bug in 'currentColor' handling
        https://bugs.webkit.org/show_bug.cgi?id=54800

        Add new layout test from the SVG 1.1 2nd Edition test suite, covering currentColor handling.
        Add tests ensuring that mutating a previously shared SVGPaint object makes it unique, so that
        mutations take affect, but don't affect other renderers which shared the SVGPaint object before.
